# timetracker

./: .clang-format  CMakeLists.txt  Makefile  db.cpp  db.h  main.cpp  time.cpp  time.h
